<resources>
    <string name="app_name">Lab6</string>
    <string name="write_to_logcat">Write to LogCat</string>
    <string name="write_to_logcat_listener">Write To LogCat - Listener</string>
    <string name="show_toast">Show Toast</string>
    <string name="we_write_something_here">We write something here</string>
    <string name="write_to_textview">Write to TextView</string>
    <string name="i_love_this_game">I Love this game</string>
    <string name="data_binding_should_work_here">Data binding should work here</string>
    <string name="update_user_data">Update user data</string>
</resources>