<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="user"
            type="com.example.lab6.User" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_to_logcat"
            android:textSize="30sp"
            android:onClick="writeToLogCat" />

        <Button
            android:id="@+id/btn_write_to_logcat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/write_to_logcat_listener"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnShowToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/show_toast"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_write_something"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:hint='@{user.firstName + " " + user.lastName}' />

        <Button
            android:id="@+id/btn_write_something"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/write_to_textview"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_data_binding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:hint="@string/data_binding_should_work_here"
            android:text='@{user.firstName}'
            />

        <Button
            android:id="@+id/btn_update_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/update_user_data"
            android:textSize="30sp" />

    </LinearLayout>
</layout>